--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -5,6 +5,8 @@ jobs:
     runs-on: windows-latest
     steps:
       - name: Print greeting
-        run: echo "Hello World!"
+        run: |
+          echo "Hello Mon"
+          echo "Hello World!"
       - name: Print goodbye
         run: echo "Done - bye!"
